--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -330,6 +330,40 @@ title = {{Paradoxical reaction to epinephrine induced by beta-blockers in an ana
 volume = {13},
 year = {2006}
 }
+@article{Imamura1996,
+abstract = {Tryptase is a trypsin-type serine protease that is released from mast cells. Bradykinin (BK) is released directly from kininogens or through activation of either Hageman factor or subsequent plasma prekallikrein. Its nasal administration or inhalation induces allergy-like symptoms. Although elevated levels of tryptase and BK in allergic fluids have been detected, the role of this proteinase and the mechanism of BK production at allergic reaction sites are still unknown. To investigate the pathologic functions of tryptase, the enzyme, purified from human lung, was incubated with normal human plasma, deficient plasmas, kininogens, or prekallikrein. High molecular weight kininogen was then added, and the mixtures were examined for vascular permeability enhancement (VPE) activity, a representative function of bradykinin, using guinea pig skin. Tryptase-treated plasma induced VPE in a dose-dependent manner; activity was lost in the absence of a kininase inhibitor but not an antihistamine drug. Tryptase produced VPE activity from normal or Hageman factor-deficient plasma, but only 30{\%} of this activity was produced from prekallikrein-deficient plasma. Significantly, no activity was obtained from kininogen-deficient plasma. Deficient plasma that were reconstituted with each missing factor resulted in VPE-inducing capacity by tryptase, equivalent to that found with normal plasma. Incubation of tryptase with high or low molecular weight kininogen induced VPE activity in a dose- and incubation time-dependent manner. Prekallikrein incubated with tryptase also generated a soybean trypsin inhibitor-sensitive VPE-inducing activity from high molecular weight kininogen. The loss of tryptase VPE-producing activity as a function of incubation time was found to be a result of spontaneous inactivation of the enzyme and not of the degradation of high molecular weight kininogen by the enzyme. We conclude that tryptase induces VPE by releasing BK, primarily through prekallikrein activation, but also through direct release from kininogens. This indicates that this mast cell-derived proteinase contributes to kinin production in allergic diseases.},
+author = {Imamura, T and Dubin, A and Moore, W and Tanaka, R and Travis, J},
+issn = {0023-6837},
+journal = {Laboratory investigation; a journal of technical methods and pathology},
+mendeley-groups = {Refractory anaphylaxis},
+month = {may},
+number = {5},
+pages = {861--70},
+pmid = {8642782},
+title = {{Induction of vascular permeability enhancement by human tryptase: dependence on activation of prekallikrein and direct release of bradykinin from kininogens.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/8642782},
+volume = {74},
+year = {1996}
+}
+
+@article{Sidebotham2010,
+author = {Sidebotham, David and McGeorge, Alastair and McGuinness, Shay and Edwards, Mark and Willcox, Timothy and Beca, John},
+doi = {10.1053/j.jvca.2009.08.002},
+isbn = {1532-8422 (Electronic)$\backslash$r1053-0770 (Linking)},
+issn = {10530770},
+journal = {Journal of Cardiothoracic and Vascular Anesthesia},
+keywords = {cardiac failure,centrifugal pump,extracorporeal life support,extracorporeal membrane oxygenation,oxygenator,polymethyl pentene,respiratory failure},
+mendeley-groups = {Refractory anaphylaxis},
+month = {feb},
+number = {1},
+pages = {164--172},
+pmid = {19875307},
+title = {{Extracorporeal Membrane Oxygenation for Treating Severe Cardiac and Respiratory Failure in Adults: Part 2—Technical Considerations}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/19875307 http://linkinghub.elsevier.com/retrieve/pii/S1053077009003012},
+volume = {24},
+year = {2010}
+}
+
 @article{Seedat2014,
 author = {Seedat, R Y and van der Westhuizen, J},
 doi = {10.11604/pamj.2016.25.136.10676},
