Changes and template problem fix

--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -5,6 +5,40 @@
     note = {R package version 2.1.7},
     url = {https://CRAN.R-project.org/package=RISmed},
   }
+@article{Simons2010,
+abstract = {PURPOSE OF REVIEW Epinephrine is a life-saving medication in the treatment of anaphylaxis, in which it has multiple beneficial pharmacologic effects. Here, we examine the evidence base for its primary role in the treatment of anaphylaxis episodes in community settings. RECENT FINDINGS We review the practical pharmacology of epinephrine in anaphylaxis, its intrinsic limitations, and the pros and cons of different routes of administration. We provide a new perspective on the adverse effects of epinephrine, including its cardiac effects. We describe the evidence base for the use of epinephrine in anaphylaxis. We discuss the role of epinephrine auto-injectors for treatment of anaphylaxis in community settings, including identification of patients who need an auto-injector prescription, current use of auto-injectors, and advances in auto-injector design. We list reasons why physicians fail to prescribe epinephrine auto-injectors for patients with anaphylaxis, and reasons why patients fail to self-inject epinephrine in anaphylaxis. We emphasize the primary role of epinephrine in the context of emergency preparedness for anaphylaxis in the community. SUMMARY Epinephrine is the medication of choice in the first-aid treatment of anaphylaxis in the community. For ethical reasons, it is not possible to conduct randomized, placebo-controlled trials of epinephrine in anaphylaxis; however, continued efforts are needed towards improving the evidence base for epinephrine injection in this potentially fatal disease.},
+author = {Simons, Keith J and Simons, F Estelle R},
+doi = {10.1097/ACI.0b013e32833bc670},
+issn = {1528-4050},
+journal = {Current Opinion in Allergy and Clinical Immunology},
+mendeley-groups = {Refractory anaphylaxis},
+month = {aug},
+number = {4},
+pages = {354--361},
+pmid = {20543673},
+title = {{Epinephrine and its use in anaphylaxis: current issues}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/20543673 http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage{\&}an=00130832-201008000-00016},
+volume = {10},
+year = {2010}
+}
+
+@article{Braganza2005,
+abstract = {BACKGROUND AND AIMS Data on acute paediatric anaphylaxis presentations to the emergency department (ED) are limited. All allergic presentations to one Australian paediatric ED were studied to determine epidemiological, clinical, and outcome data. METHODS Retrospective, case based study of patients under 16 years attending one metropolitan, paediatric teaching hospital ED in Australia over three years. The medical records of patients presenting with generalised allergic reactions and anaphylaxis satisfying relevant ICD-9-CM diagnostic codes were studied. The incidence, age, sex ratio, co-morbidities, likely aetiology, clinical features, management, and disposal were determined. RESULTS A total of 526 children with generalised allergic reactions, and 57 with anaphylaxis were included in the study. This represented incidences of 9.3:1000 ED presentations for generalised allergic reactions and 1:1000 for anaphylaxis. There were no fatalities. In anaphylaxis cases, a cause was recognised in 68.4{\%}. Cutaneous features were present in 82.5{\%}. A past history of asthma was reported in 36.8{\%}. Adrenaline was used in 39.3{\%} of severe anaphylaxis cases. The ED alone definitively cared for 97.8{\%} of all patients. Follow up was inadequate in cases of anaphylaxis. CONCLUSIONS This is the first reported incidence figure for paediatric anaphylaxis ED presentations in Australia, and is less than that reported in adults in the same local population. However, the incidence of generalised allergic reactions of 9.3:1000 was greater than in the adults. Virtually all paediatric allergic cases may be managed in the ED alone, provided that the importance of specialist follow up, particularly for severe anaphylaxis, is recognised.},
+author = {Braganza, S C and Acworth, J P and Mckinnon, D R L and Peake, J E and Brown, A F T},
+doi = {10.1136/adc.2004.069914},
+isbn = {1468-2044 (Electronic)},
+issn = {1468-2044},
+journal = {Archives of disease in childhood},
+mendeley-groups = {Refractory anaphylaxis},
+month = {feb},
+number = {2},
+pages = {159--63},
+pmid = {16308410},
+title = {{Paediatric emergency department anaphylaxis: different patterns from adults.}},
+url = {http://adc.bmj.com/content/91/2/159.short http://adc.bmj.com/cgi/doi/10.1136/adc.2004.069914 http://www.ncbi.nlm.nih.gov/pubmed/16308410 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC2082667},
+volume = {91},
+year = {2006}
+}
 
   @Manual{R,
     title = {R: A Language and Environment for Statistical Computing},
@@ -64,9 +98,9 @@ title = {{Uso do azul de metileno no tratamento de choque anafil{\'{a}}tico dura
 volume = {54},
 year = {2004}
 }
-@article{C.2016,
+@article{Tsai2016,
 abstract = {Learning Objectives: Distributive shock is common in the critically ill patient. Resuscitation with fluids and catecholamine agents have become standard of care. Methylene blue (MB) has been proposed as an alternative treatment of shock. Methods: A 67-yrold male with history of chronic lymphocytic leukemia on cycle 2 of bendamustine and rituximab, with recent admission for rash and hypotension attributed to allopurinol after cycle 1, developed shortness of breath, chest tightness, and abdominal discomfort while receiving chemotherapy. Treatment was stopped and the patient received fluids, steroids, and diphenhydramine. He became tachycardic, hypertensive, and hypoxic. The patient was intubated for airway protection. Physical exam revealed a diffuse, blanching erythematous rash. Upon arrival to the intensive care unit, he remained normotensive and extremities were well-perfused. He received additional fluids, steroids, and antihistamines. Several hours later, he developed hypotension necessitating initiation of vasopressors. Elevated tryptase level was consistent with clinical diagnosis of anaphylactic shock. Shock was refractory to maximal support on four vasopressors. A four-hour MB infusion was started at 0.5 mg/kg/hr and titrated to 2 mg/kg/hr. Shock improved and the patient was weaned down to three vasopressors. After a short period of time, he again became hypotensive on maximal vasopressor support. Another MB infusion was started and the patient was weaned down to two vasopressors. He did not require additional doses of methylene blue. The patient improved and was discharged home. Results: Reported use of MB for anaphylaxis is limited. Effect of MB on vasodilation has mostly been studied in sepsis. Increased nitric oxide (NO) production is associated with loss of vascular tone in vasodilatory shock. MB inhibits NO-induced guanylate cyclase activation and increases smooth muscle tone. MB may be an effective alternative treatment to restoring vascular tone in anaphylactic shock as evident in our case. Studies are needed to determine ideal dosage, duration of treatment, and effect on mortality.},
-author = {C., Tsai and A., Slampak-Cindric},
+author = {Tsai, C. and Slampak-Cindric, A.},
 file = {:home/wolass/Documents/refractoryAnaRev/analysis/Literature/00003246-201612001-01830.pdf:pdf},
 isbn = {1530-0293},
 journal = {Critical Care Medicine},
